added use template api
